--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     "node": true
   },
   "rules": {
-    "no-unused-vars": ["off"]
+    "no-unused-vars": ["off"],
+    "no-redeclare": ["off"]
   }
 }
