--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
   },
   "rules": {
     "no-unused-vars": ["off"],
-    "no-redeclare": ["off"]
+    "no-redeclare": ["off"],
+    "no-extra-boolean-cast": ["off"]
   }
 }
