--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,9 @@
     "browser": true,
     "node": true
   },
+  "globals": {
+    "Map": "readonly"
+  },
   "rules": {
     "no-unused-vars": ["off"],
     "no-redeclare": ["off"],
