--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
   "rules": {
     "no-unused-vars": ["off"],
     "no-redeclare": ["off"],
-    "no-extra-boolean-cast": ["off"]
+    "no-extra-boolean-cast": ["off"],
+    "no-constant-condition": ["off"]
   }
 }
